Squashing bugs

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -230,10 +230,16 @@ a:visited {
 }
 
 .group-pic {
-  margin: 2em 0;
+  margin: 2em auto;
   width: 50vw;
 }
 
+.pic-container {
+  display: flex;
+  justify-content: center;
+}
+
 .group-desc {
+  text-align: center;
   margin-bottom: 2em;
 }
